Bug tracker at http://code.google.com/p/pyftpdlib/issues/list


History
=======

Version: 1.0.2 - Date: XXXX-XX-XX
---------------------------------

Enhancements:

 * Issue 240: enabled "python -m pyftpdlib" cmdline syntax and got rid of
   "python -m pyftpdlib.tpserver" syntax which was deprecated in 1.0.0.

 * Issue 241: empty passwords are now allowed for anonymous and other users.

Bugfixes:

 * Issue 238: username is not logged in case of failed authentication.
   (patch by tlockert)

 * Issue 243: an erroneous error message is given in case the address passed to
   bind() is already in use.

Incompatible API changes:

 * "python -m pyftpdlib.ftpserver" cmdline syntax doesn't work anymore


Version: 1.0.1 - Date: 2013-02-22
---------------------------------

Bugfixes:

 * Issue 236: MultiprocessFTPServer and ThreadedFTPServer hanging in case of
   failed authentication.


Version: 1.0.0 - Date: 2013-02-19
---------------------------------

Enhancements:

 * Issue 76: python 3.x porting.

 * Issue 198: full unicode support (RFC-2640).

 * Issue 203: asyncore IO loop has been rewritten from scratch and now supports
   epoll() on Linux and kqueue() on OSX/BSD.
   Also select() (Windows) and poll() pollers have been rewritten resulting in
   pyftpdlib being an order of magnitude faster and more scalable than ever.

 * Issue 204: a new FilesystemError exception class is available in order send
   custom error strings to client from an AbstracteFS subclass.

 * Issue 207: added on_connect() and on_disconnect() callback methods to
   FTPHandler class.

 * Issues 212: provided two new classes:
     - pyftpdlib.servers.ThreadedFTPServer
     - pyftpdlib.servers.MultiprocessFTPServer  (POSIX only)
   They can be used to change the base async-based concurrecy model and use a
   multiple threads / processes based approach instead.
   Your FTPHandler subclasses will finally be free to block! ;)

 * Issue 219: it is not possible to instantiate different FPTS classes using